--- a/views/doctor-index.ejs
+++ b/views/doctor-index.ejs
@@ -97,7 +97,7 @@
                 <a href="/auth/signup">Signup</a>
             <% } %>
             <a href="/doctor/profile">View Profile</a>
-            <a href="/doctor/corporate-list">View Corporates</a>
+            <a href="/corporate/corporate-list">View Corporates</a>
             <a href="/doctor/products">Products</a>
             <br>
             <a href="/supplier/all-suppliers">View All Suppliers</a>
@@ -116,7 +116,6 @@
                 <% }) %>
             </ul>
 
-            <!-- Display Hashtags -->
             <h2>Hashtags</h2>
             <ul>
                 <% hashtags.forEach(hashtag => { %>
