--- a/views/patient-index.ejs
+++ b/views/patient-index.ejs
@@ -134,7 +134,7 @@
             </form>
 
             <a href="/patient/news-releases">View News Releases</a>
-            <a href="/patient/corporate-list">View Corporates</a>
+            <a href="/corporate/corporate-list">View Corporates</a>
 
         </div>
 
