--- a/views/patient-index.ejs
+++ b/views/patient-index.ejs
@@ -155,7 +155,7 @@
         </div>
         <a href="/patient/blogs/conditions">Condition</a>
 
-        <div class="blogs-container">
+        <!-- <div class="blogs-container">
             <h2> Blogs</h2>
             <ul>
                 <% blogs.forEach(blog => { %>
@@ -170,7 +170,7 @@
                 <% }) %>
             </ul>
             <button onclick="window.location.href='/patient/blogs'">View All Blogs</button>
-        </div>
+        </div> -->
     </div>
 
     <script>
