--- a/views/editDoctorProfile.ejs
+++ b/views/editDoctorProfile.ejs
@@ -616,6 +616,11 @@ function addFAQ() {
       <input type="file" name="profilePicture">
   </div>
   <div>
+    <label>Cover Photo:</label>
+    <input type="file" name="coverPhoto">
+</div>
+
+  <div>
     <label>Doctor Fee:</label>
     <input type="number" name="doctorFee" value="<%= doctor.doctorFee %>" required>
   </div> 
